--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,40 @@
 body{
     margin:0;
     padding:0;
+    display:flex;
+    height:100%;
 }
 
 .content{
-    width:100%;
+    width:70vw;
+    height:100vh;
+}
+
+.about{
+    width:30vw;
     height:100%;
+    background-color:#ca3297;
+    font-family: 'Germania One', cursive;
+    color:white;
+}
+
+.name{
+    font-size: 5vw;
+    margin:40
+}
+
+.three-height{
+    height:30vh;
+}
+
+.pgp{
+    position:absolute;
+    bottom:0;
+    text-align:center;
+}
+
+a:hover, a:visited, a:link, a:active, a:any-link{
+    text-decoration: none !important;
+    color:#cc5da7;
+    margin:40;
 }
