--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,55 @@
 
+canvas {
+    display:block;
+    position: fixed;
+    z-index: -1;
+}
+
 body{
     margin:0;
     padding:0;
-    display:flex;
     height:100%;
+    
+}
+
+article {
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
+    -webkit-column-width: 300px;
+       -moz-column-width: 300px;
+            column-width: 300px;
+            position: absolute;
 }
 
 .content{
-    width:70vw;
     height:100vh;
 }
 
 .about{
     width:30vw;
-    height:100%;
+    height:100vh;
     background-color:#ca3297;
     font-family: 'Germania One', cursive;
     color:white;
 }
 
+.name-wrapper{
+    margin:40;
+}
+
 .name{
-    font-size: 5vw;
-    margin:40
+    font-size: calc(1vw * 4);
+    margin:0;
+}
+
+.links{
+    font-size: calc(1vw * 3);
+    margin:0;
 }
 
 .three-height{
-    height:30vh;
+    height:20vh;
 }
 
 .pgp{
@@ -38,4 +62,19 @@ a:hover, a:visited, a:link, a:active, a:any-link{
     text-decoration: none !important;
     color:#cc5da7;
     margin:40;
+}
+
+/* Set font size for small screen */
+@media only screen and (max-width: 600px) {
+    .name{
+        font-size: calc(1vw * 15);
+    }
+
+    .about{
+        width:100%;
+    }
+    .pgp{
+        display:none;
+    }
+
 }
