--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@ body{
     padding:0;
     height:100%;
     
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
 }
 
 article {
@@ -32,6 +37,8 @@ article {
     background-color:#ca3297;
     font-family: 'Germania One', cursive;
     color:white;
+
+    
 }
 
 .name-wrapper{
@@ -46,6 +53,12 @@ article {
 .links{
     font-size: calc(1vw * 3);
     margin:0;
+
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
 }
 
 .three-height{
@@ -77,4 +90,28 @@ a:hover, a:visited, a:link, a:active, a:any-link{
         display:none;
     }
 
+}
+
+/* Animations */
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
