--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,4 @@
-<!-- <em>This site was designed by <a href="https://retrylife.ca">Evan Pratten</a></em> -->
+<!-- This site was designed by <a href="https://retrylife.ca">Evan Pratten</a> -->
+<script>
+    console.log("Site design by: Evan Pratten (https://retrylife.ca)")
+</script>
