--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@ body{
     padding:0;
 
 
+
     font-family: 'IBM Plex Mono', monospace;
 
     font-family: 'IBM Plex Sans', sans-serif;
@@ -10,6 +11,8 @@ body{
     background-color:#002c37;
     color: #7b8d94;
 }
+
+html, body {margin: 0; height: 100%; overflow: hidden}
 
 .content{
     min-height: 100vh;
@@ -76,6 +79,8 @@ a h5 {
 
 
 .term {
+    font-size: x-large;
+
     
 }
 
